--- a/index.html
+++ b/index.html
@@ -1,63 +1,29 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kuis Interaktif</title>
+    
+    <meta property="og:title" content="Kuis Produk Bakery">
+    <meta property="og:description" content="Silakan kerjakan kuis interaktif berikut ini.">
+    <meta property="og:image" content="https://wayground.com/assets/images/logo.png"> <meta property="og:url" content="https://puisikita1.github.io/quiz-produk-bakery/">
+    <meta name="twitter:card" content="summary_large_image">
+    
+    <title>Kuis Produk Bakery</title>
     <style>
-        /* Reset CSS agar full screen tanpa margin putih */
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            /* Mencegah scrollbar ganda */
-            background-color: transparent;
-        }
-
-        /* Container utama agar fleksibel */
-        .embed-container {
-            width: 100%;
-            height: 100vh;
-            /* Menggunakan 100% tinggi viewport */
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Memastikan iframe mengisi ruang yang tersisa */
-        iframe {
-            flex: 1;
-            width: 100%;
-            border: none;
-        }
-
-        /* Styling link footer agar rapi (opsional) */
-        .footer-link {
-            text-align: center;
-            padding: 5px;
-            background: #fff;
-            font-family: sans-serif;
-            font-size: 12px;
-            text-decoration: none;
-            color: #333;
-        }
+        html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background-color: #f0f0f0; }
+        .embed-container { width: 100%; height: 100vh; display: flex; flex-direction: column; }
+        iframe { flex: 1; width: 100%; border: none; }
     </style>
 </head>
-
 <body>
-
     <div class="embed-container">
-        <iframe src="https://wayground.com/embed/quiz/6981f566cc463f184f3f4cb8" title=" - Wayground" allowfullscreen>
+        <iframe 
+            src="https://wayground.com/embed/quiz/6981f566cc463f184f3f4cb8" 
+            title="Kuis Wayground" 
+            allow="fullscreen" 
+            allowfullscreen>
         </iframe>
-
-        <a href="https://wayground.com/admin?source=embedFrame" target="_blank" class="footer-link">
-            Explore more at Wayground.
-        </a>
     </div>
-
 </body>
-
 </html>
